# kolores

./: .gitignore  Makefile.am  Makefile.old  README  configure.ac  sample.mag  z_leeme.txt
atmosphere/: Makefile.am
res/: Makefile.am
res/HST_res/: README  Readme.html  Readme.txt  pcf1042msys.txt  pcf122msys.txt  pcf160bwsys.txt  pcf170wsys.txt  pcf185wsys.txt  pcf218wsys.txt  pcf255wsys.txt  pcf300wsys.txt  pcf336wsys.txt  pcf343nsys.txt  pcf375nsys.txt  pcf380wsys.txt  pcf390nsys.txt  pcf410msys.txt  pcf437nsys.txt  pcf439wsys.txt  pcf450wsys.txt  pcf467msys.txt  pcf469nsys.txt  pcf487nsys.txt  pcf502nsys.txt  pcf547msys.txt  pcf555wsys.txt  pcf569wsys.txt  pcf588nsys.txt  pcf606wsys.txt  pcf622wsys.txt  pcf631nsys.txt  pcf656nsys.txt  pcf658nsys.txt  pcf673nsys.txt  pcf675wsys.txt  pcf702wsys.txt  pcf785lpsys.txt  pcf791wsys.txt  pcf814wsys.txt  pcf850lpsys.txt  (+187 more)
res/bruzual_res/: filters_res_old
res/dslr_res/: dslr_res  haz.com  respB4_D3sReldiodosicor.csv  respG2_D3sReldiodosicor.csv  respG3_D3sReldiodosicor.csv  respR1_D3sReldiodosicor.csv
res/fukugita_res/res/: BJ_couch_newell_res  B_johnson_res  B_sandage_smith_res  F_kron_res  IC_res  I_johnson_res  I_tyson_res  J_kron_res  J_tyson_res  N_kron_res  RC_res  RF_couch_newell_res  R_johnson_res  R_sandage_smith_res  R_tyson_res  SSG_A_res  SSG_B_res  SSG_C_res  SSG_D_res  U_johnson_res  U_kron_res  U_sandage_smith_res  V_johnson_res  V_sandage_smith_res  b_strom_res  crea_filters  crea_filters.f  f555w_res  f606w_res  f702w_res  f814w_res  g_4shooter_res  g_POSS2_res  g_Pfei_res  g_SDSS_res  g_thuan_gunn_res  i_4shooter_res  i_POSS2_res  i_Pfei_res  i_SDSS_res  (+15 more)
res/fukugita_res/sed/: E_CWW_sed  E_sed  Im_sed  S0_sed  Sab_sed  Sbc_sed  Scd_sed  all_sed.fits  all_sed.u
res/other_res/: IRIMH  IRIMJ  IRIMK  IRIMKPRIME  haz.com  lee_res_pickles98  lee_res_pickles98.f  other_res
seds/: Makefile.am
seds/CWW_sed/: CWW_all_ext.sed  fort.81  merge  merge.f
src/: Makefile.am  avoidrep.f  button.f  button.inc  button.inc.in  buttqbr.f  buttqcf.f  buttqch.f  buttqex.f  buttqit.f  buttqpr.f  buttqxb.f  buttqyb.f  buttqytext.f  buttsbr.f  buttscf.f  buttsch.f  buttsex.f  buttsit.f  buttspr.f  buttsxb.f  buttsyb.f  buttsytext.f  chupper.f  expand.f  filterpar.f  findmml.f  fit_sed.f  fmean0.f  guessef.f  ifbutton.f  iofunctions.f  kolores.f  leeatm.f  leefilter.f  leevega.f  listfilter.f  ordena1f.f  photometry.f  photometry.inc  (+29 more)
