#

resbruzualdir  = $(AUXDIR)/res/bruzual_res
resfukugitadir = $(AUXDIR)/res/fukugita_res
resnirspecdir  = $(AUXDIR)/res/nirspec_res
resotherdir    = $(AUXDIR)/res/other_res
reshstdir      = $(AUXDIR)/res/HST_res

ALLRES_BRUZUAL  = bruzual_res/filters_res
ALLRES_FUKUGITA = fukugita_res/fukugita_res
ALLRES_NIRSPEC  = nirspec_res/nirspec_res
ALLRES_OTHER    = other_res/other_res
ALLRES_HST      = HST_res/pcf1042msys.txt \
                  HST_res/pcf122msys.txt \
                  HST_res/pcf160bwsys.txt \
                  HST_res/pcf170wsys.txt \
                  HST_res/pcf185wsys.txt \
                  HST_res/pcf218wsys.txt \
                  HST_res/pcf255wsys.txt \
                  HST_res/pcf300wsys.txt \
                  HST_res/pcf336wsys.txt \
                  HST_res/pcf343nsys.txt \
                  HST_res/pcf375nsys.txt \
                  HST_res/pcf380wsys.txt \
                  HST_res/pcf390nsys.txt \
                  HST_res/pcf410msys.txt \
                  HST_res/pcf437nsys.txt \
                  HST_res/pcf439wsys.txt \
                  HST_res/pcf450wsys.txt \
                  HST_res/pcf467msys.txt \
                  HST_res/pcf469nsys.txt \
                  HST_res/pcf487nsys.txt \
                  HST_res/pcf502nsys.txt \
                  HST_res/pcf547msys.txt \
                  HST_res/pcf555wsys.txt \
                  HST_res/pcf569wsys.txt \
                  HST_res/pcf588nsys.txt \
                  HST_res/pcf606wsys.txt \
                  HST_res/pcf622wsys.txt \
                  HST_res/pcf631nsys.txt \
                  HST_res/pcf656nsys.txt \
                  HST_res/pcf658nsys.txt \
                  HST_res/pcf673nsys.txt \
                  HST_res/pcf675wsys.txt \
                  HST_res/pcf702wsys.txt \
                  HST_res/pcf785lpsys.txt \
                  HST_res/pcf791wsys.txt \
                  HST_res/pcf814wsys.txt \
                  HST_res/pcf850lpsys.txt \
                  HST_res/pcf953nsys.txt \
                  HST_res/pcfqch4n15sys.txt \
                  HST_res/pcfqch4p15sys.txt \
                  HST_res/pcfquvnsys.txt \
                  HST_res/polq_par_002.txt \
                  HST_res/polq_perp_002.txt \
                  HST_res/polq_unp_001.txt \
                  HST_res/wf2f1042msys.txt \
                  HST_res/wf2f122msys.txt \
                  HST_res/wf2f160bwsys.txt \
                  HST_res/wf2f170wsys.txt \
                  HST_res/wf2f185wsys.txt \
                  HST_res/wf2f218wsys.txt \
                  HST_res/wf2f255wsys.txt \
                  HST_res/wf2f300wsys.txt \
                  HST_res/wf2f336wsys.txt \
                  HST_res/wf2f343nsys.txt \
                  HST_res/wf2f375nsys.txt \
                  HST_res/wf2f380wsys.txt \
                  HST_res/wf2f390nsys.txt \
                  HST_res/wf2f410msys.txt \
                  HST_res/wf2f437nsys.txt \
                  HST_res/wf2f439wsys.txt \
                  HST_res/wf2f450wsys.txt \
                  HST_res/wf2f467msys.txt \
                  HST_res/wf2f469nsys.txt \
                  HST_res/wf2f487nsys.txt \
                  HST_res/wf2f502nsys.txt \
                  HST_res/wf2f547msys.txt \
                  HST_res/wf2f555wsys.txt \
                  HST_res/wf2f569wsys.txt \
                  HST_res/wf2f588nsys.txt \
                  HST_res/wf2f606wsys.txt \
                  HST_res/wf2f622wsys.txt \
                  HST_res/wf2f631nsys.txt \
                  HST_res/wf2f656nsys.txt \
                  HST_res/wf2f658nsys.txt \
                  HST_res/wf2f673nsys.txt \
                  HST_res/wf2f675wsys.txt \
                  HST_res/wf2f702wsys.txt \
                  HST_res/wf2f785lpsys.txt \
                  HST_res/wf2f791wsys.txt \
                  HST_res/wf2f814wsys.txt \
                  HST_res/wf2f850lpsys.txt \
                  HST_res/wf2f953nsys.txt \
                  HST_res/wf2fqch4n33sys.txt \
                  HST_res/wf2fqch4nsys.txt \
                  HST_res/wf2fquvn33sys.txt \
                  HST_res/wf2fquvnsys.txt \
                  HST_res/wf3f1042msys.txt \
                  HST_res/wf3f122msys.txt \
                  HST_res/wf3f160bwsys.txt \
                  HST_res/wf3f170wsys.txt \
                  HST_res/wf3f185wsys.txt \
                  HST_res/wf3f218wsys.txt \
                  HST_res/wf3f255wsys.txt \
                  HST_res/wf3f300wsys.txt \
                  HST_res/wf3f336wsys.txt \
                  HST_res/wf3f343nsys.txt \
                  HST_res/wf3f375nsys.txt \
                  HST_res/wf3f380wsys.txt \
                  HST_res/wf3f390nsys.txt \
                  HST_res/wf3f410msys.txt \
                  HST_res/wf3f437nsys.txt \
                  HST_res/wf3f439wsys.txt \
                  HST_res/wf3f450wsys.txt \
                  HST_res/wf3f467msys.txt \
                  HST_res/wf3f469nsys.txt \
                  HST_res/wf3f487nsys.txt \
                  HST_res/wf3f502nsys.txt \
                  HST_res/wf3f547msys.txt \
                  HST_res/wf3f555wsys.txt \
                  HST_res/wf3f569wsys.txt \
                  HST_res/wf3f588nsys.txt \
                  HST_res/wf3f606wsys.txt \
                  HST_res/wf3f622wsys.txt \
                  HST_res/wf3f631nsys.txt \
                  HST_res/wf3f656nsys.txt \
                  HST_res/wf3f658nsys.txt \
                  HST_res/wf3f673nsys.txt \
                  HST_res/wf3f675wsys.txt \
                  HST_res/wf3f702wsys.txt \
                  HST_res/wf3f785lpsys.txt \
                  HST_res/wf3f791wsys.txt \
                  HST_res/wf3f814wsys.txt \
                  HST_res/wf3f850lpsys.txt \
                  HST_res/wf3f953nsys.txt \
                  HST_res/wf3fqch4nsys.txt \
                  HST_res/wf3fquvnsys.txt \
                  HST_res/wf4f1042msys.txt \
                  HST_res/wf4f122msys.txt \
                  HST_res/wf4f160bwsys.txt \
                  HST_res/wf4f170wsys.txt \
                  HST_res/wf4f185wsys.txt \
                  HST_res/wf4f218wsys.txt \
                  HST_res/wf4f255wsys.txt \
                  HST_res/wf4f300wsys.txt \
                  HST_res/wf4f336wsys.txt \
                  HST_res/wf4f343nsys.txt \
                  HST_res/wf4f375nsys.txt \
                  HST_res/wf4f380wsys.txt \
                  HST_res/wf4f390nsys.txt \
                  HST_res/wf4f410msys.txt \
                  HST_res/wf4f437nsys.txt \
                  HST_res/wf4f439wsys.txt \
                  HST_res/wf4f450wsys.txt \
                  HST_res/wf4f467msys.txt \
                  HST_res/wf4f469nsys.txt \
                  HST_res/wf4f487nsys.txt \
                  HST_res/wf4f502nsys.txt \
                  HST_res/wf4f547msys.txt \
                  HST_res/wf4f555wsys.txt \
                  HST_res/wf4f569wsys.txt \
                  HST_res/wf4f588nsys.txt \
                  HST_res/wf4f606wsys.txt \
                  HST_res/wf4f622wsys.txt \
                  HST_res/wf4f631nsys.txt \
                  HST_res/wf4f656nsys.txt \
                  HST_res/wf4f658nsys.txt \
                  HST_res/wf4f673nsys.txt \
                  HST_res/wf4f675wsys.txt \
                  HST_res/wf4f702wsys.txt \
                  HST_res/wf4f785lpsys.txt \
                  HST_res/wf4f791wsys.txt \
                  HST_res/wf4f814wsys.txt \
                  HST_res/wf4f850lpsys.txt \
                  HST_res/wf4f953nsys.txt \
                  HST_res/wf4fqch4nsys.txt \
                  HST_res/wf4fquvnsys.txt \
                  HST_res/wfpc2_dqepc1_003.txt \
                  HST_res/wfpc2_dqewfc2_003.txt \
                  HST_res/wfpc2_dqewfc3_003.txt \
                  HST_res/wfpc2_dqewfc4_003.txt \
                  HST_res/wfpc2_f1042m_004.txt \
                  HST_res/wfpc2_f122m_004.txt \
                  HST_res/wfpc2_f130lp_002.txt \
                  HST_res/wfpc2_f157w_001.txt \
                  HST_res/wfpc2_f160bw_004.txt \
                  HST_res/wfpc2_f165lp_002.txt \
                  HST_res/wfpc2_f170w_004.txt \
                  HST_res/wfpc2_f185w_003.txt \
                  HST_res/wfpc2_f218w_004.txt \
                  HST_res/wfpc2_f255w_004.txt \
                  HST_res/wfpc2_f300w_004.txt \
                  HST_res/wfpc2_f336w_005.txt \
                  HST_res/wfpc2_f343n_003.txt \
                  HST_res/wfpc2_f375n_003.txt \
                  HST_res/wfpc2_f380w_004.txt \
                  HST_res/wfpc2_f390n_004.txt \
                  HST_res/wfpc2_f410m_003.txt \
                  HST_res/wfpc2_f437n_003.txt \
                  HST_res/wfpc2_f439w_004.txt \
                  HST_res/wfpc2_f450w_004.txt \
                  HST_res/wfpc2_f467m_003.txt \
                  HST_res/wfpc2_f469n_004.txt \
                  HST_res/wfpc2_f487n_003.txt \
                  HST_res/wfpc2_f502n_003.txt \
                  HST_res/wfpc2_f547m_003.txt \
                  HST_res/wfpc2_f555w_004.txt \
                  HST_res/wfpc2_f569w_003.txt \
                  HST_res/wfpc2_f588n_004.txt \
                  HST_res/wfpc2_f606w_004.txt \
                  HST_res/wfpc2_f622w_003.txt \
                  HST_res/wfpc2_f631n_003.txt \
                  HST_res/wfpc2_f656n_003.txt \
                  HST_res/wfpc2_f658n_003.txt \
                  HST_res/wfpc2_f673n_003.txt \
                  HST_res/wfpc2_f675w_004.txt \
                  HST_res/wfpc2_f702w_004.txt \
                  HST_res/wfpc2_f785lp_004.txt \
                  HST_res/wfpc2_f791w_004.txt \
                  HST_res/wfpc2_f814w_004.txt \
                  HST_res/wfpc2_f850lp_004.txt \
                  HST_res/wfpc2_f953n_003.txt \
                  HST_res/wfpc2_fqch4na_002.txt \
                  HST_res/wfpc2_fqch4nb_003.txt \
                  HST_res/wfpc2_fqch4nc_002.txt \
                  HST_res/wfpc2_fqch4nd_003.txt \
                  HST_res/wfpc2_fquvna_003.txt \
                  HST_res/wfpc2_fquvnb_003.txt \
                  HST_res/wfpc2_fquvnc_003.txt \
                  HST_res/wfpc2_fquvnd_003.txt \
                  HST_res/wfpc2_fr418n_001.txt \
                  HST_res/wfpc2_fr533n_001.txt \
                  HST_res/wfpc2_fr680n_001.txt \
                  HST_res/wfpc2_fr868n_001.txt \
                  HST_res/wfpc2_optics_004.txt
dist_resbruzual_DATA = $(ALLRES_BRUZUAL)
dist_resfukugita_DATA = $(ALLRES_FUKUGITA)
dist_resnirspec_DATA = $(ALLRES_NIRSPEC)
dist_resother_DATA = $(ALLRES_OTHER)
dist_reshst_DATA = $(ALLRES_HST)
