#

sedscwwdir   = $(AUXDIR)/seds/CWW_sed
sedsvegadir  = $(AUXDIR)/seds/vega_sed
ALLSEDS_CWW  = CWW_sed/CWW_all_ext.sed
ALLSEDS_VEGA = vega_sed/alpha_lyr_005.sed \
               vega_sed/vega_ck94.sed \
               vega_sed/vega_from_koo.sed \
               vega_sed/vega_hayes85.sed
dist_sedscww_DATA = $(ALLSEDS_CWW)
dist_sedsvega_DATA = $(ALLSEDS_VEGA)
